--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -142,4 +142,10 @@
       </form>
     </div>
   </div>
+
+
+  <!-- Generate HTML to canvas-->
+  <div style="position: absolute; z-index: -2; top: 0; margin-left: -300px;" id="imageConverted" #screen class="image-sku">
+    <img id="image" [src]='imageSku'/>
+  </div>
 </div>
