--- a/src/app/pages/settings/support/support.component.scss
+++ b/src/app/pages/settings/support/support.component.scss
@@ -24,8 +24,9 @@
   .rectangle {
     height: 101px;
     width: 268px;
-    border: 1px solid #ECECEC;
+    border: 1px solid #ececec;
     border-radius: 8px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
+    margin-bottom: 20px;
   }
 }
