--- a/src/app/pages/settings/support/support.component.html
+++ b/src/app/pages/settings/support/support.component.html
@@ -42,8 +42,8 @@
                 </div>
                 <div fxFlex="70" fxLayout="column">
                   <div class="text-bold">Melalui Whatsapp</div>
-                  <div class="">0819-06000-234</div>
-                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jakarta dan sekitarnya</div>
+                  <div class="">0811-1315-234</div>
+                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jawa Barat dan Jakarta</div>
                 </div>
               </div>
               <div class="rectangle p-24" fxLayout="row wrap" fxLayoutAlign="center center">
@@ -52,8 +52,8 @@
                 </div>
                 <div fxFlex="70" fxLayout="column">
                   <div class="text-bold">Melalui Whatsapp</div>
-                  <div class="">0811-1315-234</div>
-                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jawa Barat dan Jawa Tengah</div>
+                  <div class="">0819-06000-234</div>
+                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jawa Tengah</div>
                 </div>
               </div>
             </div>
