--- a/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.html
+++ b/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.html
@@ -100,12 +100,12 @@
                     disabled>
                 </mat-form-field>
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
-                  <input matInput type="text" [value]="item.start_date | date:'dd/MM/yyyy'" placeholder="Tanggal Mulai"
+                  <input matInput type="text" [value]="item.start_date | dateToMoment" placeholder="Tanggal Mulai"
                     disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
                 <mat-form-field fxFlex="47%" class="is-light form-primary">
-                  <input matInput type="text" [value]="item.end_date | date:'dd/MM/yyyy'" placeholder="Tanggal Berakhir"
+                  <input matInput type="text" [value]="item.end_date | dateToMoment" placeholder="Tanggal Berakhir"
                     disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
@@ -131,12 +131,12 @@
                     disabled>
                 </mat-form-field>
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
-                  <input matInput type="text" [value]="item.backup?.start_date | date:'dd/MM/yyyy'" placeholder="Tanggal Mulai (Backup)"
+                  <input matInput type="text" [value]="item.backup?.start_date | dateToMoment" placeholder="Tanggal Mulai (Backup)"
                     disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
                 <mat-form-field fxFlex="47%" class="is-light form-primary">
-                  <input matInput type="text" [value]="item.backup?.end_date | date:'dd/MM/yyyy'" placeholder="Tanggal Berakhir (Backup)"
+                  <input matInput type="text" [value]="item.backup?.end_date | dateToMoment" placeholder="Tanggal Berakhir (Backup)"
                     disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
