--- a/src/app/pages/newsfeed-management/news/detail/news-detail.component.html
+++ b/src/app/pages/newsfeed-management/news/detail/news-detail.component.html
@@ -30,7 +30,7 @@
           </div>
           <div fxLayout="column" class="pb-24">
             <span class="mat-headline">{{detailNews.title}}</span>
-            <small class="secondary-text">{{detailNews.date | date:'dd MMMM yyyy'}}</small>
+            <small class="secondary-text">{{detailNews.date | dateToMoment}}</small>
           </div>
           <div fxLayout="column" class="pb-48">
             <p [innerHtml]="detailNews.description" style="text-align: justify"></p>
