--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -106,7 +106,7 @@
                 <mat-icon class="secondary-text">update</mat-icon>
               </button>
               <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'" matTooltip="Eksport Trade Program"
-                (click)="export(row.id)">
+                (click)="export(row)">
                 <mat-icon *ngIf="row.status_audience === 'approved'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_audience !== 'approved'" class="secondary-text">save_alt</mat-icon>
               </button>
