--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,8 +1,12 @@
 <div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
+  <div class="tra" *ngIf="environment?.show_label">
+    <div class="bg-tra"></div>
+    <div class="text-tra">{{ environment?.label }}</div>
+  </div>
   <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
     <div class="lgn-box">
       <div class="top">
-        <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
+        <img [src]="environment?.image" [srcset]="environment?.image_2x" />
         <div class="title">Lupa Kata Sandi</div>
       </div>
       <div class="middle-form">
