--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,92 +1,8 @@
-@import "src/@fuse/scss/fuse";
-@import "src/variable.scss";
-@import '~@angular/material/theming';
+p.backtologin {
+  margin: 30px 0 0;
 
-:host {
-  #ayoLogin {
-    width: 100%;
-    position: relative;
-    z-index: 1;
-    background: url('/assets/images/ayo/login-bg.jpg') no-repeat center center;
-    background-size: cover;
-
-    .lgn-container {
-      text-align: center;
-
-      .lgn-box {
-        // height: 620px;
-        width: 100%;
-        max-width: 420px;
-        margin: 0 auto;
-        background: #fff;
-        border-radius: 8px;
-        padding-top: 38px;
-        padding-bottom: 38px;
-        box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.33);
-
-        .top {
-          .title {
-            padding-top: 30px;
-            font-size: 14px;
-          }
-        }
-
-        .middle-form {
-          margin: 0 50px;
-          padding-top: 20px;
-
-          form {
-            div.label {
-              text-align: left;
-              position: relative;
-              top: 15px;
-              font-weight: bold;
-              font-size: 14px;
-            }
-
-            mat-form-field {
-              width: 100%;
-            }
-          }
-
-          .remember-forgot-password {
-            padding-top: 20px;
-          }
-
-          a.forgot-password {
-            color: #000;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 24px;
-          }
-
-          .remember-me {
-            font-size: 14px;
-          }
-
-          .login-button {
-            margin-top: 20px;
-            text-align: center;
-
-            button {
-              background: $primary-red;
-              color: #fff;
-              display: block;
-              width: 100%;
-              margin: 0 auto;
-            }
-          }
-        }
-      }
-    }
-
-    p.backtologin {
-      margin: 30px 0 0;
-
-      a {
-        color: $primary-red;
-        text-align: center;
-      }
-    }
+  a {
+    color: #bb130f;
+    text-align: center;
   }
 }
