--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
 @import "src/@fuse/scss/fuse";
-@import "src/variable.scss";
+@import "src/scss/variable/variable.scss";
 fuse-main {
   display: flex;
   flex-direction: column;
