--- a/src/app/pages/user-management/customer/index/customer-index.component.html
+++ b/src/app/pages/user-management/customer/index/customer-index.component.html
@@ -33,11 +33,11 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama Referensi Toko" prop="refferal_name">
+        <ngx-datatable-column name="Nama Referensi Toko" prop="refferal_name" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.refferal_name || '-'}}</ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Kode Referensi" prop="refferal_code">
+        <ngx-datatable-column name="Kode Referensi" prop="refferal_code" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.refferal_code || '-'}}</ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Kota" prop="city" [sortable]="false">
