status wholesaler not-registered

--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -114,6 +114,7 @@
             <div class="name-container pl-12">
               <mat-icon *ngIf="row.status === 'A'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
               <mat-icon *ngIf="row.status === 'I'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+              <mat-icon *ngIf="row.status === 'P'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
             </div>
           </ng-template>
         </ngx-datatable-column>
