--- a/src/app/pages/dte/audience/import/import-audience-dialog.component.html
+++ b/src/app/pages/dte/audience/import/import-audience-dialog.component.html
@@ -30,7 +30,7 @@
       </div>
       <br>
       <div class="">
-        <small>Total Row : {{rows ? rows.length : '-'}}</small>
+        <small>Total Row Valid : {{rows ? validData : '-'}}</small>
       </div>
       <div class="responsive">
         <table class="table">
@@ -45,10 +45,11 @@
               <th nowrap>Divisi</th>
               <th nowrap>Wilayah</th>
               <th nowrap>Area</th>
+              <th nwrap>Alasan Tidak Valid</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of rows">
+            <tr *ngFor="let item of rows" [ngStyle]="{'background' : item.is_valid ? '#fff' : '#efaea8'}">
               <td nowrap>
                 {{ item.name }}
               </td>
@@ -76,9 +77,12 @@
               <td nowrap>
                 {{ item.area_code }}
               </td>
+              <td nowrap>
+                {{ item.reason || '-' }}
+              </td>
             </tr>
-            <tr *ngIf="!rows">
-              <td style="text-align:center" colspan="9">
+            <tr *ngIf="rows.length === 0">
+              <td style="text-align:center" colspan="10">
                 Tidak ada file yang dipilih
               </td>
             </tr>
@@ -91,7 +95,7 @@
       <div class="p-16">
         <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
           fxFlex="1 0 auto">
-          <button type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="!files">Kirim</button>
+          <button type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="rows.length === 0">Kirim</button>
           <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()" [disabled]="uploading">Batal</button>
         </div>
       </div>
