--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.scss
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.scss
@@ -1,3 +1,8 @@
 :host /deep/ .mat-input-element:disabled {
   color: rgba(0, 0, 0, 1) !important;
 }
+.wilayah {
+  background: #3a3a3a;
+  color: white;
+  padding: 0 24px;
+}
