--- a/src/app/pages/user-management/field-force/index/field-force-index.component.html
+++ b/src/app/pages/user-management/field-force/index/field-force-index.component.html
@@ -104,7 +104,7 @@
         <ngx-datatable-column name="ID Karyawan" prop="username" summary-template="activeCell"></ngx-datatable-column>
 
         <ngx-datatable-column name="Teritori" prop="area_code" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.area_code[0]}}</ng-template>
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.area_code}}</ng-template>
         </ngx-datatable-column>
 
         <ngx-datatable-column [width]="100" name="Status" prop="active_status">
