--- a/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
+++ b/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
@@ -48,8 +48,13 @@
           <div class="" formArrayName="task_templates" *ngFor="let item of formSchedule.get('task_templates')['controls']; let i = index;">
             <div class="py-24" [formGroupName]="i">
               <div class="px-24 template-task" fxLayout="row" fxLayoutAlign="space-between end">
-                <h3 class="">Template Tugas</h3>
-                <h3><mat-slide-toggle formControlName="is_backup" (change)="backupTask($event, i)">Backup Task?</mat-slide-toggle></h3>
+                <div fxFlex="50">
+                  <h3 class="">Template Tugas</h3>
+                </div>
+                <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+                  <h3><mat-slide-toggle formControlName="is_backup" (change)="backupTask($event, i)">Backup Task?</mat-slide-toggle></h3>
+                  <h3><mat-slide-toggle formControlName="is_verification">Push to FF?</mat-slide-toggle></h3>
+                </div>
               </div>
 
               <div class="p-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="25px" fxLayoutGap.lt-md="0px" fxLayoutAlign="start end">
